data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1108.wast
;; 9. **Test Nine**:    - A loop block containing `br_table` instructions with indirect indices obtained from operations (like division by zero).    - **Constraint**: Ensures indirect indices from exceptional operations do not breach the intended loop block boundaries.    - **Relation**: Checks edge cases from arithmetic operations affecting table indices.

(assert_invalid
  (module (func (result i32)
    (loop (result i32)
      (i32.const 42)
      (i32.const 0)
      (i32.div_s)
      (br_table 0 1)
    )
  ))
  "type mismatch"
)